# ai-project

./: .gitignore  README.md  pyproject.toml
src/ai_project/: __init__.py  chatbot.py  classifier.py  cli.py  preprocessor.py
src/ai_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_chatbot.py  test_classifier.py  test_cli.py  test_preprocessor.py
